feat: atualiza projeto e ajusta configurações